test/rules.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0] # Do not touch the FORWARD chain! Only Docker can do so
:OUTPUT ACCEPT [0:0]
:DOCKER-USER - [0:0]

################################################################################
##################################### INPUT ####################################
################################################################################

# Allow all incoming packets from localhost
-A INPUT -i lo -j ACCEPT

# Allow all incoming packets for already established connections
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Allow incoming SSH from the allowed network interfaces
-A INPUT -i eth+ -p tcp --dport 22 -j ACCEPT
-A INPUT -i zt+ -p tcp --dport 22 -j ACCEPT

# Allow incoming UDP DNS from the eth* network interfaces (needed because UDP is never "established")
-A INPUT -i eth+ -p udp --dport 53 -j ACCEPT

# Allow incoming ZeroTier (default port number) from the eth* network interfaces
-A INPUT -i eth+ -p tcp --dport 9993 -j ACCEPT
-A INPUT -i eth+ -p udp --dport 9993 -j ACCEPT

# Default policy: DROP

################################################################################
#################################### OUTPUT ####################################
################################################################################

# Allow all outgoing packets to localhost
-A OUTPUT -o lo -j ACCEPT

# Allow all outgoing packets for already established connections
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Allow outgoing DNS to the eth* network interfaces
-A OUTPUT -o eth+ -p tcp --dport 53 -j ACCEPT
-A OUTPUT -o eth+ -p udp --dport 53 -j ACCEPT

# Allow outgoing ZeroTier (default port number) to the eth* network interfaces
-A OUTPUT -o eth+ -p tcp --dport 9993 -j ACCEPT
-A OUTPUT -o eth+ -p udp --dport 9993 -j ACCEPT

# Block other (non-established) outgoing packets to class-C LANs
-A OUTPUT -d 192.168.0.0/16 -j DROP

# Default policy: ACCEPT

################################################################################
################################## DOCKER-USER #################################
################################################################################

# Allow all packets for already established connections
-A DOCKER-USER -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Block (non-established) packets from containers to class-C LANs
-A DOCKER-USER -d 192.168.0.0/16 -j DROP

# Default policy: (none) (RETURN to chain FORWARD)

COMMIT
